--- a/NetworkSimulation/batch/batch_configuration_ping_high.properties
+++ b/NetworkSimulation/batch/batch_configuration_ping_high.properties
@@ -1,8 +1,9 @@
 #
-#Thu Apr 30 00:13:23 CDT 2015
-output.directory=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation/output/exp2_hyp1
+#ping_high
+#Wed Apr 29 23:52:55 CDT 2015
+output.directory=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation/output/ping_high
 host.0.type=LOCAL
-batch.param.file=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation/batch/batch_params_exp2_hyp1.xml
+batch.param.file=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation/batch/batch_params_ping_high.xml
 key.directory=/Users/michaelhollman/.ssh
 model.directory=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation
 vm.arguments=-Xmx512M
