--- a/NetworkSimulation/batch/batch_configuration_connection_low.properties
+++ b/NetworkSimulation/batch/batch_configuration_connection_low.properties
@@ -1,8 +1,9 @@
 #
+#connection_low
 #Wed Apr 29 23:52:55 CDT 2015
-output.directory=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation/output/control
+output.directory=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation/output/connection_low
 host.0.type=LOCAL
-batch.param.file=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation/batch/batch_params_control.xml
+batch.param.file=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation/batch/batch_params_connection_low.xml
 key.directory=/Users/michaelhollman/.ssh
 model.directory=/Users/michaelhollman/git/mas-network-simulation/NetworkSimulation
 vm.arguments=-Xmx512M
